fixed detail page overflow

--- a/src/app/Components/manga-details/manga-details.component.scss
+++ b/src/app/Components/manga-details/manga-details.component.scss
@@ -57,11 +57,9 @@
 .chapter-container::-webkit-scrollbar{
 display: none;
 }
-.topnavbar{
-  @apply
-  w-screen
-  
-}
+// .topnavbar{
+ 
+// }
 .manga-details::-webkit-scrollbar{
   display: none;
 }
